# open_fda_drug_label

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/open_fda_drug_label/: __init__.py  api.py  drug.py  open_fda_drug_label.py  shelf.py
tests/: test_open_fda_drug_label.py
